--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       - '3306:3306'
     environment:
       MYSQL_DATABASE: 'empresa'
-      MYSQL_USER: 'root'
+      MYSQL_USER: 'admin'
       MYSQL_PASSWORD: 'q1w2e3r4'
       MYSQL_ROOT_PASSWORD: 'q1w2e3r4'
