--- a/kubernetes/deployment-aplicacao.yml
+++ b/kubernetes/deployment-aplicacao.yml
@@ -12,7 +12,10 @@ spec:
         name: aplicacao-noticia-pod
     spec:
       containers:
-        - name: container-aplicacao
+        - name: container-aplicacao-cpu
           image: jnlucas/noticia-alura:v3
+          resources:
+            requests:
+              cpu: 400m
           ports: 
             - containerPort: 80
